--- a/components/header.html
+++ b/components/header.html
@@ -1,82 +1,88 @@
-<header class="site-header navbar bg-base-100/80 backdrop-blur-xl border-b border-base-200 sticky top-0 z-50">
-  <div class="navbar-start">
-    <a href="index.html" class="btn btn-ghost normal-case">
-      <img src="assets/images/Ludus-Mentis-transparent.png"
-           alt="Logo Ludus Mentis"
-           class="h-10 hover:scale-105 transition-transform" />
-    </a>
-  </div>
+<header class="navbar bg-base-100 shadow-md sticky top-0 z-50">
+  <div class="container mx-auto px-4">
+    <div class="navbar-start">
+      <a href="index.html" class="btn btn-ghost p-0">
+        <img src="assets/images/Ludus-Mentis-transparent.png"
+             alt="Logo Ludus Mentis"
+             class="h-10 hover:scale-105 transition-transform" />
+      </a>
+    </div>
 
-  <div class="navbar-center hidden lg:flex">
-    <ul class="menu menu-horizontal px-1 gap-2">
-      <li><a href="index.html" class="hover:text-primary transition-colors font-medium">Accueil</a></li>
-      
-      <li class="dropdown dropdown-hover">
-        <label tabindex="0" class="hover:text-primary transition-colors font-medium cursor-pointer">
-          À propos
-          <svg class="fill-current w-4 h-4 ml-1 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-            <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"/>
-          </svg>
-        </label>
-        <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 rounded-box w-56 mt-3 border border-base-200">
-          <li><a href="a-propos.html" class="hover:bg-primary/10 hover:text-primary">Notre histoire</a></li>
-          <li><a href="concept.html" class="hover:bg-primary/10 hover:text-primary">Concept</a></li>
-          <li><a href="methodologie.html" class="hover:bg-primary/10 hover:text-primary">Méthodologie</a></li>
-          <li><a href="enjeux.html" class="hover:bg-primary/10 hover:text-primary">Enjeux</a></li>
-          <li><a href="educateurs.html" class="hover:bg-primary/10 hover:text-primary">Espace éducateurs</a></li>
-        </ul>
-      </li>
-
-      <li class="dropdown dropdown-hover">
-        <label tabindex="0" class="hover:text-primary transition-colors font-medium cursor-pointer">
-          Académie
-          <svg class="fill-current w-4 h-4 ml-1 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-            <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"/>
-          </svg>
-        </label>
-        <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 rounded-box w-56 mt-3 border border-base-200">
-          <li><a href="academie.html" class="hover:bg-primary/10 hover:text-primary">Programme</a></li>
-          <li><a href="infos-tarifs.html" class="hover:bg-primary/10 hover:text-primary">Infos & Tarifs</a></li>
-          <li><a href="faq.html" class="hover:bg-primary/10 hover:text-primary">FAQ</a></li>
-        </ul>
-      </li>
-
-      <li><a href="contact.html" class="hover:text-primary transition-colors font-medium">Contact</a></li>
-    </ul>
-  </div>
-
-  <div class="navbar-end">
-    <!-- Mobile menu button -->
-    <div class="dropdown dropdown-end lg:hidden">
-      <label tabindex="0" class="btn btn-ghost btn-circle">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
-        </svg>
-      </label>
-      <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow-xl bg-base-100 rounded-box w-64 border border-base-200">
-        <li><a href="index.html">Accueil</a></li>
-        <li class="menu-title">
-          <span>À propos</span>
+    <!-- Desktop Navigation -->
+    <div class="navbar-center hidden lg:flex">
+      <ul class="menu menu-horizontal px-1 gap-1">
+        <li><a href="index.html" class="font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-lg">Accueil</a></li>
+        
+        <li class="dropdown dropdown-hover">
+          <label tabindex="0" class="font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-lg cursor-pointer">
+            À propos
+            <svg class="fill-current w-4 h-4 ml-1 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"/>
+            </svg>
+          </label>
+          <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 rounded-xl w-56 mt-3 border border-gray-200">
+            <li><a href="a-propos.html" class="hover:bg-orange-50 hover:text-orange-600">Notre histoire</a></li>
+            <li><a href="concept.html" class="hover:bg-orange-50 hover:text-orange-600">Concept</a></li>
+            <li><a href="methodologie.html" class="hover:bg-orange-50 hover:text-orange-600">Méthodologie</a></li>
+            <li><a href="enjeux.html" class="hover:bg-orange-50 hover:text-orange-600">Enjeux</a></li>
+            <li><a href="educateurs.html" class="hover:bg-orange-50 hover:text-orange-600">Espace éducateurs</a></li>
+          </ul>
         </li>
-        <li><a href="a-propos.html" class="pl-8">Notre histoire</a></li>
-        <li><a href="concept.html" class="pl-8">Concept</a></li>
-        <li><a href="methodologie.html" class="pl-8">Méthodologie</a></li>
-        <li><a href="enjeux.html" class="pl-8">Enjeux</a></li>
-        <li><a href="educateurs.html" class="pl-8">Espace éducateurs</a></li>
-        <li class="menu-title">
-          <span>Académie</span>
+
+        <li class="dropdown dropdown-hover">
+          <label tabindex="0" class="font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-lg cursor-pointer">
+            Académie
+            <svg class="fill-current w-4 h-4 ml-1 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"/>
+            </svg>
+          </label>
+          <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 rounded-xl w-56 mt-3 border border-gray-200">
+            <li><a href="academie.html" class="hover:bg-orange-50 hover:text-orange-600">Programme</a></li>
+            <li><a href="infos-tarifs.html" class="hover:bg-orange-50 hover:text-orange-600">Infos & tarifs</a></li>
+            <li><a href="faq.html" class="hover:bg-orange-50 hover:text-orange-600">FAQ</a></li>
+          </ul>
         </li>
-        <li><a href="academie.html" class="pl-8">Programme</a></li>
-        <li><a href="infos-tarifs.html" class="pl-8">Infos & Tarifs</a></li>
-        <li><a href="faq.html" class="pl-8">FAQ</a></li>
-        <li><a href="contact.html">Contact</a></li>
+
+        <li><a href="contact.html" class="font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-lg">Contact</a></li>
       </ul>
     </div>
-    
-    <!-- CTA Button Desktop -->
-    <a href="contact.html" class="btn btn-primary btn-sm hidden lg:flex">
-      Inscription 2026
-    </a>
+
+    <div class="navbar-end">
+      <!-- CTA Button Desktop -->
+      <a href="contact.html" class="btn btn-primary btn-sm hidden lg:flex text-white">
+        Inscription 2026
+      </a>
+      
+      <!-- Mobile menu button - VISIBLE -->
+      <div class="dropdown dropdown-end lg:hidden">
+        <label tabindex="0" class="btn btn-square btn-ghost bg-gray-100 hover:bg-gray-200 border-2 border-gray-300">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </label>
+        <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-4 shadow-2xl bg-base-100 rounded-xl w-72 border-2 border-gray-200 right-0">
+          <li><a href="index.html" class="text-base py-3 font-medium">Accueil</a></li>
+          <li class="menu-title pt-3">
+            <span class="text-gray-600 text-xs uppercase font-bold">À propos</span>
+          </li>
+          <li><a href="a-propos.html" class="pl-4 py-2">Notre histoire</a></li>
+          <li><a href="concept.html" class="pl-4 py-2">Concept</a></li>
+          <li><a href="methodologie.html" class="pl-4 py-2">Méthodologie</a></li>
+          <li><a href="enjeux.html" class="pl-4 py-2">Enjeux</a></li>
+          <li><a href="educateurs.html" class="pl-4 py-2">Espace éducateurs</a></li>
+          <li class="menu-title pt-3">
+            <span class="text-gray-600 text-xs uppercase font-bold">Académie</span>
+          </li>
+          <li><a href="academie.html" class="pl-4 py-2">Programme</a></li>
+          <li><a href="infos-tarifs.html" class="pl-4 py-2">Infos & tarifs</a></li>
+          <li><a href="faq.html" class="pl-4 py-2">FAQ</a></li>
+          <li class="mt-4">
+            <a href="contact.html" class="btn btn-primary btn-block text-white">
+              Inscription 2026
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </header>
-          
