--- a/components/header.html
+++ b/components/header.html
@@ -1,42 +1,1 @@
-<header class="site-header">
-  <div class="header-inner">
-
-    <a href="index.html" class="logo-link">
-      <img src="assets/images/Ludus-Mentis-transparent.png"
-           alt="Logo Ludus Mentis"
-           class="site-logo" />
-    </a>
-
-    <button id="menuToggle" class="menu-toggle" aria-label="Menu" aria-controls="mainNav" aria-expanded="false">
-      ☰
-    </button>
-
-    <nav class="main-nav" id="mainNav">
-      <a href="index.html">Accueil</a>
-
-      <div class="dropdown">
-        <button class="dropbtn" aria-haspopup="true" aria-controls="aproposMenu" aria-expanded="false">À propos ▼</button>
-        <div class="dropdown-content" id="aproposMenu">
-          <a href="a-propos.html">Notre histoire</a>
-          <a href="concept.html">Concept</a>
-          <a href="methodologie.html">Méthodologie</a>
-          <a href="enjeux.html">Enjeux</a>
-           <a href="educateurs.html">Espace éducateurs</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <button class="dropbtn" aria-haspopup="true" aria-controls="academieMenu" aria-expanded="false">Académie ▼</button>
-        <div class="dropdown-content" id="academieMenu">
-          <a href="academie.html">Programme</a>
-          <a href="infos-tarifs.html">Infos & Tarifs</a>
-          <a href="faq.html">FAQ</a>
-        </div>
-      </div>
-
-      <a href="contact.html">Contact</a>
-         
-       
-    </nav>
-  </div>
-</header>
+<header class="navbar bg-base-100 shadow"><div class="container mx-auto px-4"><a class="flex items-center gap-2" href="index.html"><img alt="Logo Ludus Mentis" class="h-10 w-auto" src="assets/images/Ludus-Mentis-transparent.png"/><span class="font-semibold">Ludus Mentis</span></a><nav class="flex-1 hidden md:flex justify-center gap-2"><a class="btn btn-ghost" href="index.html">Accueil</a><a class="btn btn-ghost" href="concept.html">Concept</a><a class="btn btn-ghost" href="methodologie.html">Méthodologie</a><a class="btn btn-ghost" href="academie.html">Programme</a><a class="btn btn-ghost" href="educateurs.html">Espace éducateurs</a><a class="btn btn-ghost" href="faq.html">FAQ</a><a class="btn btn-ghost" href="enjeux.html">Enjeux</a><a class="btn btn-ghost" href="infos-tarifs.html">Infos &amp; Tarifs</a><a class="btn btn-ghost" href="contact.html">Contact</a><a class="btn btn-ghost" href="a-propos.html">Notre histoire</a></nav><div class="md:navbar-end ml-auto flex items-center gap-2"><div class="dropdown dropdown-end"><div class="btn btn-sm" role="button" tabindex="0">FR/EN</div><ul class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-32" tabindex="0"><li><a data-switch-lang="fr" href="#">Français</a></li><li><a data-switch-lang="en" href="#">English</a></li></ul></div><a class="btn btn-primary hidden md:inline-flex" href="contact.html">Contact</a><div class="dropdown md:hidden"><div class="btn btn-ghost" role="button" tabindex="0">Menu</div><ul class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52" tabindex="0"><li><a href="index.html">Accueil</a></li><li><a href="concept.html">Concept</a></li><li><a href="methodologie.html">Méthodologie</a></li><li><a href="academie.html">Programme</a></li><li><a href="educateurs.html">Espace éducateurs</a></li><li><a href="faq.html">FAQ</a></li><li><a href="enjeux.html">Enjeux</a></li><li><a href="infos-tarifs.html">Infos &amp; Tarifs</a></li><li><a href="contact.html">Contact</a></li><li><a href="a-propos.html">Notre histoire</a></li></ul></div></div></div></header>
