--- a/components/header.html
+++ b/components/header.html
@@ -1,9 +1,7 @@
 <header class="navbar bg-base-100/80 backdrop-blur border-b border-base-200 sticky top-0 z-50">
   <div class="container mx-auto px-4">
     <div class="navbar-start">
-      <a href="index.html" class="btn btn-ghost p-0">
-        <img src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis" class="h-10 hover:scale-105 transition-transform"/>
-      </a>
+      <a href="index.html" class="btn btn-ghost text-xl font-extrabold tracking-tight">Ludus&nbsp;Mentis</a>
     </div>
 
     <div class="navbar-center hidden lg:flex">
