--- a/components/header.html
+++ b/components/header.html
@@ -10,15 +10,26 @@
         <li><a href="ados.html" class="font-medium">Ados</a></li>
         <li><a href="parents.html" class="font-medium">Parents</a></li>
         <li><a href="educateurs.html" class="font-medium">Éducateurs</a></li>
-        <li><a href="ressources.html" class="font-medium">Ressources</a></li>
+        <li>
+          <details>
+            <summary class="font-medium">Découvrir</summary>
+            <ul class="p-2 bg-base-100 shadow-xl rounded-box border border-base-200 w-56">
+              <li><a href="a-propos.html">À propos</a></li>
+              <li><a href="concept.html">Concept</a></li>
+              <li><a href="methodologie.html">Méthodologie</a></li>
+              <li><a href="enjeux.html">Enjeux</a></li>
+              <li><a href="ressources.html">Ressources</a></li>
+            </ul>
+          </details>
+        </li>
         <li><a href="infos-tarifs.html" class="font-medium">Infos & tarifs</a></li>
         <li><a href="faq.html" class="font-medium">FAQ</a></li>
+        <li><a href="contact.html" class="font-medium">Contact</a></li>
       </ul>
     </div>
 
     <div class="navbar-end">
-      <a href="contact.html" class="btn btn-primary text-white">Pré‑inscription 2026</a>
-      <!-- Mobile menu -->
+      <a href="contact.html" class="btn btn-primary text-white">Pré-inscription 2026</a>
       <div class="dropdown dropdown-end lg:hidden ml-2">
         <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -30,10 +41,16 @@
           <li><a href="ados.html">Ados</a></li>
           <li><a href="parents.html">Parents</a></li>
           <li><a href="educateurs.html">Éducateurs</a></li>
+          <li class="menu-title">Découvrir</li>
+          <li><a href="a-propos.html">À propos</a></li>
+          <li><a href="concept.html">Concept</a></li>
+          <li><a href="methodologie.html">Méthodologie</a></li>
+          <li><a href="enjeux.html">Enjeux</a></li>
           <li><a href="ressources.html">Ressources</a></li>
           <li><a href="infos-tarifs.html">Infos & tarifs</a></li>
           <li><a href="faq.html">FAQ</a></li>
-          <li class="mt-2"><a href="contact.html" class="btn btn-primary text-white">Pré‑inscription 2026</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li class="mt-2"><a href="contact.html" class="btn btn-primary text-white">Pré-inscription 2026</a></li>
         </ul>
       </div>
     </div>
