--- a/components/header.html
+++ b/components/header.html
@@ -1,17 +1,54 @@
-<header class="navbar bg-base-100/80 backdrop-blur border-b border-base-200 sticky top-0 z-50">
+<header class="navbar bg-base-100 shadow-md sticky top-0 z-50">
   <div class="container mx-auto px-4">
-    <div class="navbar-start"><a href="index.html" class="btn btn-ghost text-xl font-extrabold tracking-tight">Ludus&nbsp;Mentis</a></div>
-    <div class="navbar-center hidden lg:flex"><ul class="menu menu-horizontal gap-1">
-      <li><a href="index.html" class="font-medium">Accueil</a></li>
-      <li><a href="ados.html" class="font-medium">Ados</a></li>
-      <li><a href="parents.html" class="font-medium">Parents</a></li>
-      <li><a href="educateurs.html" class="font-medium">Éducateurs</a></li>
-      <li><details><summary class="font-medium">Découvrir</summary><ul class="p-2 bg-base-100 shadow-xl rounded-box border border-base-200 w-56">
-        <li><a href="a-propos.html">À propos</a></li><li><a href="concept.html">Concept</a></li><li><a href="methodologie.html">Méthodologie</a></li><li><a href="enjeux.html">Enjeux</a></li><li><a href="ressources.html">Ressources</a></li>
-      </ul></details></li>
-      <li><a href="infos-tarifs.html" class="font-medium">Infos & tarifs</a></li>
-      <li><a href="faq.html" class="font-medium">FAQ</a></li>
-      <li><a href="contact.html" class="font-medium">Contact</a></li>
-    </ul></div>
-    <div class="navbar-end"><a href="contact.html" class="btn btn-primary text-white">Pré-inscription 2026</a></div>
-  </div></header>
+    <div class="navbar-start">
+      <a href="index.html" class="btn btn-ghost p-0">
+        <span class="text-xl font-extrabold tracking-tight">Ludus&nbsp;Mentis</span>
+      </a>
+    </div>
+    <div class="navbar-center hidden lg:flex">
+      <ul class="menu menu-horizontal px-1 gap-1">
+        <li><a href="index.html" class="font-medium">Accueil</a></li>
+        <li><a href="ados.html" class="font-medium">Ados</a></li>
+        <li><a href="parents.html" class="font-medium">Parents</a></li>
+        <li><a href="educateurs.html" class="font-medium">Éducateurs</a></li>
+        <li class="dropdown dropdown-hover">
+          <label tabindex="0" class="font-medium">Découvrir</label>
+          <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 rounded-xl w-56 mt-3 border border-gray-200">
+            <li><a href="a-propos.html">À propos</a></li>
+            <li><a href="concept.html">Concept</a></li>
+            <li><a href="methodologie.html">Méthodologie</a></li>
+            <li><a href="enjeux.html">Enjeux</a></li>
+            <li><a href="ressources.html">Ressources</a></li>
+          </ul>
+        </li>
+        <li><a href="infos-tarifs.html" class="font-medium">Infos & tarifs</a></li>
+        <li><a href="faq.html" class="font-medium">FAQ</a></li>
+        <li><a href="contact.html" class="font-medium">Contact</a></li>
+      </ul>
+    </div>
+    <div class="navbar-end">
+      <a href="contact.html" class="btn btn-primary text-white">Pré-inscription 2026</a>
+      <div class="dropdown dropdown-end lg:hidden ml-2">
+        <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
+        </div>
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow-xl bg-base-100 rounded-box w-56">
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="ados.html">Ados</a></li>
+          <li><a href="parents.html">Parents</a></li>
+          <li><a href="educateurs.html">Éducateurs</a></li>
+          <li class="menu-title">Découvrir</li>
+          <li><a href="a-propos.html">À propos</a></li>
+          <li><a href="concept.html">Concept</a></li>
+          <li><a href="methodologie.html">Méthodologie</a></li>
+          <li><a href="enjeux.html">Enjeux</a></li>
+          <li><a href="ressources.html">Ressources</a></li>
+          <li><a href="infos-tarifs.html">Infos & tarifs</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li class="mt-2"><a href="contact.html" class="btn btn-primary text-white">Pré-inscription 2026</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
